// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header snapshot (AuthStatus.AUTH) 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <Connect(Header)>
        <Header
          authInfo={
            Object {
              "avatar_url": "img/1.png",
              "email": "Oliver.conner@gmail.com",
              "id": 1,
              "is_pro": false,
              "name": "Oliver.conner",
            }
          }
          dispatch={[Function]}
          isAuthorized={true}
        >
          <header
            className="header"
          >
            <div
              className="container"
            >
              <div
                className="header__wrapper"
              >
                <div
                  className="header__left"
                >
                  <Link
                    className="header__logo-link"
                    to="/"
                  >
                    <LinkAnchor
                      className="header__logo-link"
                      href="/"
                      navigate={[Function]}
                    >
                      <a
                        className="header__logo-link"
                        href="/"
                        onClick={[Function]}
                      >
                        <img
                          alt="6 cities logo"
                          className="header__logo"
                          height="41"
                          src="/img/logo.svg"
                          width="81"
                        />
                      </a>
                    </LinkAnchor>
                  </Link>
                </div>
                <nav
                  className="header__nav"
                >
                  <ul
                    className="header__nav-list"
                  >
                    <li
                      className="header__nav-item user"
                    >
                      <Link
                        className="header__nav-link header__nav-link--profile"
                        to="/favorites"
                      >
                        <LinkAnchor
                          className="header__nav-link header__nav-link--profile"
                          href="/favorites"
                          navigate={[Function]}
                        >
                          <a
                            className="header__nav-link header__nav-link--profile"
                            href="/favorites"
                            onClick={[Function]}
                          >
                            <div
                              className="header__avatar-wrapper user__avatar-wrapper"
                            />
                            <span
                              className="header__user-name user__name"
                            >
                              Oliver.conner@gmail.com
                            </span>
                          </a>
                        </LinkAnchor>
                      </Link>
                    </li>
                  </ul>
                </nav>
              </div>
            </div>
          </header>
        </Header>
      </Connect(Header)>
    </Provider>
  </Router>
</BrowserRouter>
`;

exports[`Header snapshot (AuthStatus.NO_AUTH) 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Provider
      store={
        Object {
          "clearActions": [Function],
          "dispatch": [Function],
          "getActions": [Function],
          "getState": [Function],
          "replaceReducer": [Function],
          "subscribe": [Function],
        }
      }
    >
      <Connect(Header)>
        <Header
          authInfo={null}
          dispatch={[Function]}
          isAuthorized={false}
        >
          <header
            className="header"
          >
            <div
              className="container"
            >
              <div
                className="header__wrapper"
              >
                <div
                  className="header__left"
                >
                  <Link
                    className="header__logo-link"
                    to="/"
                  >
                    <LinkAnchor
                      className="header__logo-link"
                      href="/"
                      navigate={[Function]}
                    >
                      <a
                        className="header__logo-link"
                        href="/"
                        onClick={[Function]}
                      >
                        <img
                          alt="6 cities logo"
                          className="header__logo"
                          height="41"
                          src="/img/logo.svg"
                          width="81"
                        />
                      </a>
                    </LinkAnchor>
                  </Link>
                </div>
                <nav
                  className="header__nav"
                >
                  <ul
                    className="header__nav-list"
                  >
                    <li
                      className="header__nav-item user"
                    >
                      <Link
                        className="header__nav-link header__nav-link--profile"
                        to="/login"
                      >
                        <LinkAnchor
                          className="header__nav-link header__nav-link--profile"
                          href="/login"
                          navigate={[Function]}
                        >
                          <a
                            className="header__nav-link header__nav-link--profile"
                            href="/login"
                            onClick={[Function]}
                          >
                            <div
                              className="header__avatar-wrapper user__avatar-wrapper"
                            />
                            <span
                              className="header__user-name user__name"
                            >
                              Sing in
                            </span>
                          </a>
                        </LinkAnchor>
                      </Link>
                    </li>
                  </ul>
                </nav>
              </div>
            </div>
          </header>
        </Header>
      </Connect(Header)>
    </Provider>
  </Router>
</BrowserRouter>
`;
